<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutPage">

    <LinearLayout
        android:id="@+id/layoutAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="32dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/photo_github"
            app:shapeAppearanceOverlay="@style/CircularImageViewShape" />

        <TextView
            android:id="@+id/textDemon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/demon_king"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceHeadlineSmall"
            android:textColor="?attr/colorTertiary" />

        <LinearLayout
            android:id="@+id/layoutBio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_page"
                android:textAppearance="?attr/textAppearanceTitleMedium" />

            <TextView
                android:id="@+id/textBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/bio"
                android:textAppearance="?attr/textAppearanceBodyMedium" />

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/matDivider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp" />

        <LinearLayout
            android:id="@+id/layoutGithub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iconGithub"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_github" />

            <TextView
                android:id="@+id/textGithub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/github"
                android:textAppearance="?attr/textAppearanceBodyLarge" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>